1.增加配置中心文件获取 2.消息追踪 3.ribbon服务消费 4.hystrix 断路器监控和断路器面板

--- a/chen-api-gateway/src/main/resources/application.yml
+++ b/chen-api-gateway/src/main/resources/application.yml
@@ -7,10 +7,10 @@ zuul:
   routes:
     api-a:
       path: /api-a/**  #   http://localhost:5555/api-a/hi
-      serviceId: hello
+      serviceId: chen-hello
     api-b:
       path: /api-b/**  #   http://localhost:5555/api-a/hi
-      serviceId: admin
+      serviceId: chen-admin
 
 
 eureka:
