--- a/chen-common/pom.xml
+++ b/chen-common/pom.xml
@@ -12,6 +12,6 @@
     <groupId>chen</groupId>
     <artifactId>chen-common</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <packaging>jar</packaging>
 
 </project>
