--- a/chen-config-client/pom.xml
+++ b/chen-config-client/pom.xml
@@ -12,6 +12,11 @@
     <groupId>chen</groupId>
     <artifactId>chen-config-client</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
