--- a/chen-config-client/src/main/resources/bootstrap.properties
+++ b/chen-config-client/src/main/resources/bootstrap.properties
@@ -1,7 +1,9 @@
-spring.application.name=chen-config-client
-#spring.cloud.config.uri= http://localhost:8888/
 
-eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
-spring.cloud.config.uri= http://localhost:4444/
-server.port=8881
+
+  spring.application.name=chen-config-client
+  spring.cloud.config.label=master
+  spring.cloud.config.profile=dev
+  spring.cloud.config.uri= http://localhost:4444/
+  server.port=4445
+  eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 
