--- a/chen-ribbon/pom.xml
+++ b/chen-ribbon/pom.xml
@@ -10,16 +10,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>chen</groupId>
-    <artifactId>chen-config-server</artifactId>
+    <artifactId>chen-ribbon</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-config-server</artifactId>
-        </dependency>
-
-    </dependencies>
 
 
 </project>
